# my_python_cicd

./: README.md  app.py  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: ci-cd.yml
